fixed navbar links + updated some spacings

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ nav {
   font-weight: 50;
   font-size: 20px;
   padding: 20px;
+  margin-bottom: -11px;
 }
 
 nav a {
@@ -88,7 +89,8 @@ nav li.active a {
 }
 .about,
 .projects,
-.contact {
+.contact,
+.skills {
   padding: 50px 40px;
 }
 
@@ -134,9 +136,9 @@ nav li.active a {
   list-style: none;
 }
 .skills p {
-  margin: 0; 
+  margin: 0;
 }
-.skill-main-title{
+.skill-main-title {
   font-weight: 700;
 }
 
